--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,15 @@ description = ""
 authors = ["Martin Ueding <mu@martin-ueding.de>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "automatic_incremental_uploads"}]
+packages = [{ include = "automatic_incremental_uploads" }]
+
+[tool.poetry.scripts]
+automatic-incremental-uploads = 'automatic_incremental_uploads.__main__:main'
 
 [tool.poetry.dependencies]
 python = "^3.11"
 inotify = "^0.2.10"
 pysftp = "^0.2.9"
-
 
 [build-system]
 requires = ["poetry-core"]
